--- a/assets/css/cultura-napoli-custom-style.css
+++ b/assets/css/cultura-napoli-custom-style.css
@@ -110,6 +110,11 @@
   --bs-font-sans-serif: "Archivo",Geneva,Tahoma,sans-serif;
 
   --primary-active: #0f4659;
+
+  --cn-giallo: #D8B470;
+  --cn-giallo-rgb: 180,112,20;
+  --cn-rosso: #CD2E25;
+  --cn-rosso-rgb: 205, 46, 37;
 }
 
 /*
@@ -137,6 +142,10 @@
   font-variation-settings:
     "wdth" 100;
 }
+.clash-display-medium {
+  font-family: 'ClashDisplay-Medium';
+  letter-spacing: .04em;
+}
 
 body {
   font-family: "Archivo", sans-serif;
@@ -152,6 +161,23 @@ body {
   border-color:var(--bs-primary);
 }
 
+
+/*
+ * BOLLI argomenti
+ */
+.icona-argomento { display: flex; color: inherit; padding: .5rem; border-radius: .5em; border: 2px solid transparent; text-decoration: none; }
+.icona-argomento figure { display: flex; flex-direction: column; justify-content: center; align-items: center; width: 3em; height: 3em; background-color: rgba(var(--cn-giallo-rgb),.1); margin-right: 1em; }
+.icona-argomento figure img { max-width: 60%; height: auto; margin-bottom: 0; }
+.icona-argomento .label { display: flex; flex-direction: column; justify-content: center; line-height: 1em; }
+@media(min-width: 992px) {
+  .icona-argomento { flex-direction: column; text-align: center; align-items: center; padding: .5rem 0;  }
+  .icona-argomento figure { width: 5em; height: 5em; margin-right: auto; margin-left: auto; margin-bottom: .7em; }
+}
+@media(min-width: 1440px) {
+  .icona-argomento figure { width: 6em; height: 6em; }
+}
+.icona-argomento:hover { border: 2px solid rgba(var(--cn-giallo-rgb), .2); background: rgba(var(--cn-giallo-rgb), .1); text-decoration: none; }
+.icona-argomento:hover figure { background-color: rgba(var(--bs-white-rgb),1); }
 
 
 
