--- a/assets/css/cultura-napoli-custom-style.css
+++ b/assets/css/cultura-napoli-custom-style.css
@@ -389,14 +389,15 @@ a.read-more .icon {
     fill: var(--bs-primary);
 }
 
-a.card-evento { text-decoration: none; }
+a.card-evento { background-color: transparent; text-decoration: none; }
 .card-evento .img-responsive.rounded,
 .card-evento .img-responsive.rounded-2,
 .card-evento .img-responsive.rounded-3 { overflow: hidden; }
-.card-evento .card-body { padding: 1em 0; }
+.card-evento .card-body { padding: .7em 0; }
 .card-evento .card-body .card-title.h5,
 .card-evento .card-body h5.card-title { color: var(--bs-black); margin-bottom:0; }
 .card-evento .card-body .card-text { color: var(--bs-secondary); }
+.card-evento::after { display: none; }
 
 .map-wrapper.map-column { margin: 0; }
 .map-wrapper.rounded-3 { overflow: hidden; }
