--- a/assets/css/cultura-napoli-custom-style.css
+++ b/assets/css/cultura-napoli-custom-style.css
@@ -191,21 +191,24 @@ body {
 }
 
 /*
- * BOLLI argomenti
+ * ICONE argomenti
  */
 .icona-argomento { display: flex; color: inherit; padding: .5rem; border-radius: .5em; border: 2px solid transparent; text-decoration: none; }
 .icona-argomento figure { display: flex; flex-direction: column; justify-content: center; align-items: center; width: 3em; height: 3em; background-color: rgba(var(--cn-giallo-rgb),.1); margin-right: 1em; }
-.icona-argomento figure img { max-width: 60%; height: auto; margin-bottom: 0; }
+.icona-argomento figure img { max-width: 90%; height: auto; margin-bottom: 0; }
 .icona-argomento .label { display: flex; flex-direction: column; justify-content: center; line-height: 1em; }
+
 @media(min-width: 992px) {
   .icona-argomento { flex-direction: column; text-align: center; align-items: center; padding: .5rem 0;  }
   .icona-argomento figure { width: 5em; height: 5em; margin-right: auto; margin-left: auto; margin-bottom: .7em; }
 }
 @media(min-width: 1440px) {
   .icona-argomento figure { width: 6em; height: 6em; }
+  .hero .icona-argomento figure { width: 12em; height: 12em; }
 }
-.icona-argomento:hover { border: 2px solid rgba(var(--cn-giallo-rgb), .2); background: rgba(var(--cn-giallo-rgb),.1); text-decoration: none; }
-.icona-argomento:hover figure { background-color: rgba(var(--bs-white-rgb),1); }
+
+.bolli-argomenti .icona-argomento:hover { border: 2px solid rgba(var(--cn-giallo-rgb), .2); background: rgba(var(--cn-giallo-rgb),.1); text-decoration: none; }
+.bolli-argomenti .icona-argomento:hover figure { background-color: rgba(var(--bs-white-rgb),1); }
 
 
 
