--- a/assets/css/cultura-napoli-custom-style.css
+++ b/assets/css/cultura-napoli-custom-style.css
@@ -191,6 +191,32 @@ body {
 }
 
 /*
+ * CHIPS
+ */
+
+.chips-title { font-size: 1rem; font-weight: 400; padding: .11em .6em .2rem 0; }
+
+.chip { padding: .4em 1.2em .4em .6em; border-radius: .2em; min-width: 0; height: auto; margin-top: 0; }
+.chip.chip-simple { padding-right: .6em; }
+.chip .chip-label { font-size: .8rem; font-weight: 400; color: var(--bs-black); letter-spacing: 0.02em;transform: none; text-transform: uppercase; height: auto; }
+
+.chip:not(.chip-disabled) {
+    border: 1px solid rgba(var(--cn-giallo-rgb), .4) outset;
+    background: rgba(var(--cn-giallo-rgb), .4);
+}
+.chip:is(a):hover:not(.chip-disabled) { background-color: var(--cn-giallo); }
+
+.card-itinerario .chip,
+.card-itinerario .chip:hover,
+.card-itinerario .chip:is(a):hover:not(.chip-disabled) { background: transparent; border: 1px solid var(--bs-white); }
+.card-itinerario .chip .chip-label { color: var(--bs-white); }
+
+.btn-dropdown { font-size: 1rem; font-weight: 400; color: var(--bs-black); }
+.dropdown .btn-dropdown { --bs-btn-hover-color: var(--bs-black); }
+.btn-dropdow .icon { fill: var(--bs-primary); }
+
+
+/*
  * ICONE argomenti
  */
 .icona-argomento { display: flex; color: inherit; padding: .5rem; border-radius: .5em; border: 2px solid transparent; text-decoration: none; }
@@ -250,7 +276,7 @@ body {
 }
 
 .link-list-wrapper ul li a span {
-    color: var(--bs-primary);
+    color: var(--bs-black);
 }
 /*
 .link-list-wrapper ul li a.right-icon .icon.secondary {
@@ -350,6 +376,20 @@ body {
        color: var(--bs-primary);
    }
 }
+.navbar.it-navscroll-wrapper .link-list-wrapper ul li a.active span {
+  color: var(--cn-giallo);
+}
+aside .cmp-navscroll .navbar.it-navscroll-wrapper .link-list-wrapper ul li a.active {
+  border-left: 2px solid var(--cn-giallo);
+}
+
+.cmp-navscroll .navbar.it-navscroll-wrapper .link-list-wrapper .accordion .accordion-header .accordion-button {
+    color: var(--bs-primary);
+}
+.cmp-navscroll .navbar.it-navscroll-wrapper .link-list-wrapper ul li a:hover span {
+    color: var(--cn-giallo);
+}
+
 
 .skiplinks {
    background-color: #e2eef3;
@@ -410,8 +450,6 @@ a.read-more .icon {
     fill: var(--bs-primary);
 }
 
-.card .card-body .card-text { color: rgba(var(--bs-dark-rgb),.8); line-height: 1.4em; }
-
 a.card-evento { background-color: transparent; text-decoration: none; }
 .card-evento .img-responsive.rounded,
 .card-evento .img-responsive.rounded-2,
@@ -442,7 +480,7 @@ a.card-luogo { background-color: transparent; text-decoration: none; }
 .card-itinerario .img-responsive.rounded-2,
 .card-itinerario .img-responsive.rounded-3 { overflow: hidden; }
 .card-itinerario .img-responsive .img-wrapper:after {
-  content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, .2) 100%); }
+  content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(0deg, rgba(0, 0, 0, 0.7) 20%, rgba(0, 0, 0, 0) 100%); }
 .card-itinerario .card-body { position: absolute; bottom: 0; width: 100%; color: #FFF; }
 .card-itinerario .card-body .card-title { color: #FFF; }
 
@@ -565,6 +603,11 @@ select.just-validate-success-field {
 /*
 /* Splide
 */
+.it-carousel-same-height .it-single-slide-wrapper { height: 100%; }
+.it-carousel-same-height figure { height: 100%; }
+.it-carousel-same-height figure img { height: 100%; width: auto; border-radius: .5rem; }
+
+
 .slider_home .splide__pagination {
   gap: .75rem;
   justify-content: flex-start;
