--- a/assets/css/cultura-napoli-custom-style.css
+++ b/assets/css/cultura-napoli-custom-style.css
@@ -471,15 +471,17 @@ a.read-more .icon {
     fill: var(--bs-primary);
 }
 
-a.card-evento { background-color: transparent; text-decoration: none; }
+a.card-evento { background-color: transparent; text-decoration: none; height: auto !important; }
 .card-evento .img-responsive.rounded,
 .card-evento .img-responsive.rounded-2,
 .card-evento .img-responsive.rounded-3 { overflow: hidden; }
-.card-evento .card-body { padding: .7em 1em; }
+.card-evento .card-body { padding: .7em .7em; }
 .card-evento .card-body .card-title.h5,
-.card-evento .card-body h5.card-title { color: var(--bs-black); margin-bottom:0; }
-.card-evento .card-body .card-text { color: var(--bs-secondary); }
+.card-evento .card-body h5.card-title { color: var(--bs-black); line-height: 1.1em; margin-bottom:.5em; }
+.card-evento .card-body .card-text { color: var(--bs-secondary); line-height: 1.3em; }
 
+.card-evento:before { content: ''; position: absolute; top: 0; left: 25%; width: 50%; height: 50%; opacity: 0; border-radius: .8rem; background: rgba(153, 136, 103, .15); transition: all .2s ease; }
+.card-evento:hover:before { top: -0.4rem; left: -0.4rem; width: calc(100% + .8rem); height: calc(100% + .8rem); opacity: 1; }
 
 a.card-full { text-decoration: none; }
 .card-full .card-image-wrapper { position: relative; aspect-ratio: calc(16/9); overflow: hidden; box-shadow: 0 2px 20px 0 rgba(0,0,0,.1) }
@@ -493,8 +495,8 @@ a.card-luogo { background-color: transparent; text-decoration: none; }
 .card-luogo .img-responsive.rounded-3 { overflow: hidden; }
 .card-luogo .card-body { padding: .7em 0; }
 .card-luogo .card-body .card-title.h5,
-.card-luogo .card-body h5.card-title { color: var(--bs-black); margin-bottom:0; }
-.card-luogo .card-body .card-text { color: var(--bs-secondary); }
+.card-luogo .card-body h5.card-title { color: var(--bs-black); line-height: 1.1em; margin-bottom:.5em; }
+.card-luogo .card-body .card-text { color: var(--bs-secondary); line-height: 1.2em; }
 
 .card-luogo.card-luogo-small { flex-direction: row; background: var(--bs-white); border: 1px solid #e5e5e5; }
 .card-luogo.card-luogo-small .card-body .card-title.h5,
@@ -506,10 +508,10 @@ a.card-progetto { background-color: transparent; text-decoration: none; }
 .card-progetto .img-responsive:after { content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(0deg,rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%); }
 .card-progetto .card-body { padding: 1em 1em; }
 .card-progetto .card-body .card-title.h4,
-.card-progetto .card-body h4.card-title { color: var(--bs-black); margin-bottom:0; }
+.card-progetto .card-body h4.card-title { color: var(--bs-black); line-height: 1.1em; margin-bottom:.5em; }
 .card-progetto .card-body .card-title.h5,
-.card-progetto .card-body h5.card-title { color: var(--bs-black); margin-bottom:0; }
-.card-progetto .card-body .card-text { color: var(--bs-secondary); }
+.card-progetto .card-body h5.card-title { color: var(--bs-black); line-height: 1.1em; margin-bottom:.5em; }
+.card-progetto .card-body .card-text { color: var(--bs-secondary); line-height: 1.2em; }
 
 
 .bg-100 .card-luogo.card-luogo-small,
@@ -521,8 +523,8 @@ a.card-progetto { background-color: transparent; text-decoration: none; }
 .bg-100 .card:not(.no-glow):hover,
 .bg-200 .card:not(.no-glow):hover { box-shadow: 0 0 1rem rgba(var(--cn-giallo-rgb), .4); }
 
-.bg-100 .card-evento:hover,
-.bg-200 .card-evento:hover { background: rgba(255,255,255,.4)}
+/* .bg-100 .card-evento:hover,
+.bg-200 .card-evento:hover { background: rgba(255,255,255,.4)} */
 
 a.card-itinerario { background-color: transparent; text-decoration: none; }
 .card-itinerario .img-responsive.rounded,
