--- a/assets/css/cultura-napoli-custom-style.css
+++ b/assets/css/cultura-napoli-custom-style.css
@@ -661,11 +661,15 @@ select.just-validate-success-field {
 */
 .single-itinerario .it-page-section:not(:first-of-type) { border-top: 1px solid #c5c7c9; padding-top: 2rem; }
 
-.tappa { position: relative; }
-.tappa:before { content: ""; position: absolute; left: 1.25rem; top: 0; bottom:0; width: 0; border-left: 1px solid var(--cn-giallo); }
-.tappa:after { content: ""; position: absolute; left: .5rem; top: 50%; margin-top: -.75rem; width: 1.5rem; height: 1.5rem; border-radius: 50%; border: 1px solid var(--cn-giallo); background: #fff; }
-.tappa .card:after { content: ""; position: absolute; left: -3.7rem; top: 50%; margin-top: -.39rem; width: .8rem; height: .8rem; border-radius: 50%; background: rgba(var(--cn-giallo-rgb),1); opacity: 0; z-index: 2; }
-.tappa .card:hover:after { opacity: 1; }
+.tappa-wrapper { position: relative; padding-left: 3rem; }
+.tappa-wrapper:before { content: ""; position: absolute; top: 0; bottom:0; left:1.3rem; width: 1px; background: var(--cn-giallo); }
+.tappa-wrapper:after { content: ""; position: absolute; top: 4.3rem; left:calc(.6rem - 1px); width: 1.6rem; height: 1.6rem; border-radius: 50%; background: var(--bs-white); border:1px solid var(--cn-giallo); }
+
+.card-tappa .card-body .h5.card-title { line-height: 1.25rem; margin-bottom: .2em; }
+.card-tappa .card-body .card-text { color: var(--bs-secondary); line-height: 1.2em; }
+.card-tappa .card-body .card-text .card-address { display: block; margin-bottom: .7em; color: var(--bs-secondary); line-height: 1.2em; }
+
+
 
 /*
 /* Splide
