--- a/assets/css/cultura-napoli-custom-style.css
+++ b/assets/css/cultura-napoli-custom-style.css
@@ -480,8 +480,8 @@ a.card-evento { background-color: transparent; text-decoration: none; height: au
 .card-evento .card-body h5.card-title { color: var(--bs-black); line-height: 1.1em; margin-bottom:.5em; }
 .card-evento .card-body .card-text { color: var(--bs-secondary); line-height: 1.3em; }
 
-.card-evento:before { content: ''; position: absolute; top: 0; left: 25%; width: 50%; height: 50%; opacity: 0; border-radius: .8rem; background: rgba(153, 136, 103, .15); transition: all .2s ease; }
-.card-evento:hover:before { top: -0.4rem; left: -0.4rem; width: calc(100% + .8rem); height: calc(100% + .8rem); opacity: 1; }
+.card:before { content: ''; position: absolute; top: 0; left: 25%; width: 50%; height: 50%; opacity: 0; border-radius: .8rem; background: rgba(153, 136, 103, .15); transition: all .2s ease; }
+.card:hover:before { top: -0.4rem; left: -0.4rem; width: calc(100% + .8rem); height: calc(100% + .8rem); opacity: 1; }
 
 a.card-full { text-decoration: none; }
 .card-full .card-image-wrapper { position: relative; aspect-ratio: calc(16/9); overflow: hidden; box-shadow: 0 2px 20px 0 rgba(0,0,0,.1) }
@@ -493,10 +493,10 @@ a.card-luogo { background-color: transparent; text-decoration: none; }
 .card-luogo .img-responsive.rounded,
 .card-luogo .img-responsive.rounded-2,
 .card-luogo .img-responsive.rounded-3 { overflow: hidden; }
-.card-luogo .card-body { padding: .7em 0; }
+.card-luogo .card-body { padding: .7em .7em; }
 .card-luogo .card-body .card-title.h5,
 .card-luogo .card-body h5.card-title { color: var(--bs-black); line-height: 1.1em; margin-bottom:.5em; }
-.card-luogo .card-body .card-text { color: var(--bs-secondary); line-height: 1.2em; }
+.card-luogo .card-body .card-text { color: var(--bs-secondary); line-height: 1.3em; }
 
 .card-luogo.card-luogo-small { flex-direction: row; background: var(--bs-white); border: 1px solid #e5e5e5; }
 .card-luogo.card-luogo-small .card-body .card-title.h5,
