--- a/assets/css/cultura-napoli-custom-style.css
+++ b/assets/css/cultura-napoli-custom-style.css
@@ -480,12 +480,12 @@ a.card-evento { background-color: transparent; text-decoration: none; height: au
 .card-evento .card-body h5.card-title { color: var(--bs-black); line-height: 1.1em; margin-bottom:.5em; }
 .card-evento .card-body .card-text { color: var(--bs-secondary); line-height: 1.3em; }
 
-.card:before { content: ''; position: absolute; top: 0; left: 25%; width: 50%; height: 50%; opacity: 0; border-radius: .8rem; background: rgba(153, 136, 103, .15); transition: all .2s ease; }
-.card:hover:before { top: -0.4rem; left: -0.4rem; width: calc(100% + .8rem); height: calc(100% + .8rem); opacity: 1; }
+.card:not(.card-full):before { content: ''; position: absolute; top: 0; left: 25%; width: 50%; height: 50%; opacity: 0; border-radius: .8rem; background: rgba(153, 136, 103, .15); transition: all .2s ease; }
+.card:not(.card-full):hover:before { top: -0.4rem; left: -0.4rem; width: calc(100% + .8rem); height: calc(100% + .8rem); opacity: 1; }
 
 a.card-full { text-decoration: none; }
 .card-full .card-image-wrapper { position: relative; aspect-ratio: calc(16/9); overflow: hidden; box-shadow: 0 2px 20px 0 rgba(0,0,0,.1) }
-.card-full .card-image { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-size: cover; background-position: center center; hoverflow: hidden; }
+.card-full .card-image { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-size: cover; background-position: center center; overflow: hidden; }
 .card-full .card-image img { width: 100%; }
 .card-full .card-body .card-title { color: var(--bs-black); }
 
