--- a/assets/css/cultura-napoli-custom-style.css
+++ b/assets/css/cultura-napoli-custom-style.css
@@ -480,12 +480,9 @@ a.card-evento { background-color: transparent; text-decoration: none; height: au
 .card-evento .card-body h5.card-title { color: var(--bs-black); line-height: 1.1em; margin-bottom:.5em; }
 .card-evento .card-body .card-text { color: var(--bs-secondary); line-height: 1.3em; }
 
-.card:not(.card-full):before { content: ''; position: absolute; top: 0; left: 25%; width: 50%; height: 50%; opacity: 0; border-radius: .8rem; background: rgba(153, 136, 103, .15); transition: all .2s ease; }
-.card:not(.card-full):hover:before { top: -0.4rem; left: -0.4rem; width: calc(100% + .8rem); height: calc(100% + .8rem); opacity: 1; }
-
 a.card-full { text-decoration: none; }
 .card-full .card-image-wrapper { position: relative; aspect-ratio: calc(16/9); overflow: hidden; box-shadow: 0 2px 20px 0 rgba(0,0,0,.1) }
-.card-full .card-image { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-size: cover; background-position: center center; overflow: hidden; }
+.card-full .card-image { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-size: cover; background-position: center center; hoverflow: hidden; }
 .card-full .card-image img { width: 100%; }
 .card-full .card-body .card-title { color: var(--bs-black); }
 
@@ -522,6 +519,11 @@ a.card-progetto { background-color: transparent; text-decoration: none; }
 
 .bg-100 .card:not(.no-glow):hover,
 .bg-200 .card:not(.no-glow):hover { box-shadow: 0 0 1rem rgba(var(--cn-giallo-rgb), .4); }
+
+.card:not(.no-hover):before { content: ''; position: absolute; top: 0; left: 15%; width: 70%; height: 70%; opacity: 0; border-radius: .8rem; background: var(--card-bg, rgba(153, 136, 103, .15)); transition: all .2s ease; }
+.card:not(.no-hover):hover:before { top: -0.4rem; left: -0.4rem; width: calc(100% + .8rem); height: calc(100% + .8rem); opacity: 1; }
+
+
 
 /* .bg-100 .card-evento:hover,
 .bg-200 .card-evento:hover { background: rgba(255,255,255,.4)} */
@@ -677,7 +679,6 @@ select.just-validate-success-field {
 .it-carousel-same-height .it-single-slide-wrapper { height: 100%; }
 .it-carousel-same-height figure { height: 100%; }
 .it-carousel-same-height figure img { height: 100%; width: auto; border-radius: .5rem; }
-
 
 
 .slider_home .splide__pagination {
