--- a/assets/css/cultura-napoli-custom-style.css
+++ b/assets/css/cultura-napoli-custom-style.css
@@ -178,6 +178,7 @@ b, strong {
    --bs-btn-color: var(--bs-black);
    --bs-btn-hover-color: var(--bs-dark);
    --bs-btn-active-color: var(--cn-giallo);
+   --bs-btn-border-radius: .5rem;
  }
 
 .btn:hover {
@@ -210,6 +211,10 @@ b, strong {
     color: var(--bs-primary-hover);
     box-shadow: inset 0 0 0 2px var(--bs-primary-hover);
 }
+
+.btn .icon { height: 1em; width: 1em; margin-top: -.2em; }
+
+.btn-xs { border-radius: .5rem; }
 
 /*
  * CHIPS
@@ -651,7 +656,7 @@ select.just-validate-success-field {
 /* Evento
 */
 .single-evento .it-page-section:not(:first-of-type) { border-top: 1px solid #c5c7c9; padding-top: 2rem; }
-.single-evento #luogo .card .icon { width: 1em; height: 1em; fill:var(--bs-primary); stroke:var(--bs-primary); stroke-width: .1em; margin-top: -0.2em; }
+.single-evento #luogo .card .card-title .icon { width: 1em; height: 1em; fill:var(--bs-primary); stroke:var(--bs-primary); stroke-width: .1em; margin-top: -0.2em; }
 .single-evento #luogo .card .card-body { padding-top: 1em; padding-left: 0; padding-right: 0; }
 .single-evento #luogo .card .card-body .card-title.h5,
 .single-evento #luogo .card .card-body h5.card-title { margin-bottom: 0; }
