--- a/assets/css/cultura-napoli-custom-style.css
+++ b/assets/css/cultura-napoli-custom-style.css
@@ -510,9 +510,9 @@ a.card-luogo { background-color: transparent; text-decoration: none; }
 .card-luogo.card-luogo-small .img-responsive-wrapper { width: 144px; }
 
 a.card-progetto { background-color: transparent; text-decoration: none; }
-.card-progetto .img-responsive { overflow: hidden; border-radius: var(--bs-border-radius-lg) var(--bs-border-radius-lg) 0 0; }
+.card-progetto .img-responsive { overflow: hidden; border-radius: var(--bs-border-radius-lg) var(--bs-border-radius-lg) 0 0; z-index: 2; }
 .card-progetto .img-responsive:after { content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(0deg,rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%); }
-.card-progetto .card-body { padding: 1em 1em; }
+.card-progetto .card-body { padding: 1em 1em; background: #fff; border-radius: 0 0 8px 8px; z-index: 2; }
 .card-progetto .card-body .card-title.h4,
 .card-progetto .card-body h4.card-title { color: var(--bs-black); line-height: 1.1em; margin-bottom:.5em; }
 .card-progetto .card-body .card-title.h5,
@@ -529,7 +529,7 @@ a.card-progetto { background-color: transparent; text-decoration: none; }
 .bg-100 .card:not(.no-glow):hover,
 .bg-200 .card:not(.no-glow):hover { box-shadow: 0 0 1rem rgba(var(--cn-giallo-rgb), .4); }
 
-.card:not(.no-hover):before { content: ''; position: absolute; top: 0; left: 15%; width: 70%; height: 70%; opacity: 0; border-radius: .8rem; background: var(--card-bg, rgba(153, 136, 103, .15)); transition: all .2s ease; }
+.card:not(.no-hover):before { content: ''; position: absolute; top: 0; left: 15%; width: 70%; height: 70%; opacity: 0; border-radius: .8rem; background: var(--card-bg, rgba(153, 136, 103, .15)); z-index: 1; transition: all .2s ease; }
 .card:not(.no-hover):hover:before { top: -0.4rem; left: -0.4rem; width: calc(100% + .8rem); height: calc(100% + .8rem); opacity: 1; }
 
 
