--- a/assets/css/cultura-napoli-custom-style.css
+++ b/assets/css/cultura-napoli-custom-style.css
@@ -532,6 +532,8 @@ a.card-progetto { background-color: transparent; text-decoration: none; }
 .card:not(.no-hover):before { content: ''; position: absolute; top: 0; left: 15%; width: 70%; height: 70%; opacity: 0; border-radius: .8rem; background: var(--card-bg, rgba(153, 136, 103, .15)); z-index: 1; transition: all .2s ease; }
 .card:not(.no-hover):hover:before { top: -0.4rem; left: -0.4rem; width: calc(100% + .8rem); height: calc(100% + .8rem); opacity: 1; }
 
+.card .img-responsive-wrapper { z-index: 2; }
+.card .card-body { z-index: 3; }
 
 
 /* .bg-100 .card-evento:hover,
